[package]
name = "chip-oxide"
version = "0.1.0"
authors = ["grantlmul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]

